Converting some as classes to js and bridging the gap between the two of them

--- a/locale/es_ES/myResources.properties
+++ b/locale/es_ES/myResources.properties
@@ -2,17 +2,6 @@
 #### EN_US L10N RESOURCE FILE ####
 ##################################
 
-#
-# MODULES/VIDEOPLAYER
-#
-
-MESSAGE_SUBTITLING_CONTROLS=Controles de subtitulado:
-
-
-#
-# VIEW/COMMON
-#
-
 TITLE_ERROR=Error
 TITLE_INFORMATION=Información
 TITLE_CONFIRMATION=Confirmación
@@ -23,6 +12,13 @@ TEXT_CAMERA_NOT_FOUND=La webcam no estÃ¡ siendo detectada. Por favor, asegÃºrate
 TEXT_ADMINISTRATIVELY_DISABLED=Alguna directiva de seguridad prohibe el acceso a la webcam y al micrÃ³fono. Por favor, ponte en contacto con el administrador del sistema.
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Por favor, pincha en 'Permitir' cuando veas esta ventana. Marca la casilla 'Recordar' si quieres saltar este paso la siguiente vez que grabes un ejercicio.
 TEXT_MIC_TEST_EXPLAIN=Este test te ayudarÃ¡ a saber si tu micrÃ³fono funciona correctamente y si tiene el volumen mÃ­nimo requierido para grabar un ejercicio.
+
+LABEL_MIC_INPUT_LEVEL=Nivel entrada micrófono
+LABEL_ROLE_CURRENTLY_TALKING=Hablando
+SHOW_SUBTITLES=Mostrar subtítulos
+HIDE_SUBTITLES=Ocultar subtítulos
+SUBITLE_START_TIME_TOOLTIP=Iniciar línea de subtítulo
+SUBTITLE_STOP_TIME_TOOLTIP=Detener línea de subtítulo
 
 BUTTON_RETRY=Reintentar
 BUTTON_OK=Aceptar
