--- a/locale/fr_FR/myResources.properties
+++ b/locale/fr_FR/myResources.properties
@@ -2,17 +2,6 @@
 #### EN_US L10N RESOURCE FILE ####
 ##################################
 
-#
-# MODULES/VIDEOPLAYER
-#
-
-MESSAGE_SUBTITLING_CONTROLS=Subtitling Controls:
-
-
-#
-# VIEW/COMMON
-#
-
 TITLE_ERROR = Error
 TITLE_INFORMATION = Information
 TITLE_CONFIRMATION = Confirmation
@@ -23,6 +12,13 @@ TEXT_CAMERA_NOT_FOUND=Your camera device couldn't be detected. Please make sure 
 TEXT_ADMINISTRATIVELY_DISABLED=An administrative rule forbids the access to camera and microphone. Please contact your system administrator.
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Please click 'Allow' when you see this window. Also click on 'Remember' to skip this step the next time you want to record something.
 TEXT_MIC_TEST_EXPLAIN=This test will ensure that your microphone works as excepted and has the minimum required volume to record an exercise.
+
+LABEL_MIC_INPUT_LEVEL=Mic Input Level
+LABEL_ROLE_CURRENTLY_TALKING=Talking
+SHOW_SUBTITLES=Show subtitles
+HIDE_SUBTITLES=Hide subtitles
+SUBITLE_START_TIME_TOOLTIP=Start subtitle line
+SUBTITLE_STOP_TIME_TOOLTIP=Stop subtitle line
 
 BUTTON_RETRY=Retry
 BUTTON_OK=Ok
