added utf8 support to locales (fixed an accent issue in the Flash config applet)

--- a/locale/eu_ES/myResources.properties
+++ b/locale/eu_ES/myResources.properties
@@ -6,7 +6,7 @@ TITLE_ERROR=Errorea
 TITLE_INFORMATION=Informazioa
 TITLE_CONFIRMATION=Berrespena
 
-TITLE_PRIVACY_SETTINGS=Configuración de privacidad
+TITLE_PRIVACY_SETTINGS=Pribatutasunaren konfigurazioa
 TEXT_MIC_NOT_FOUND=Zure mikrofono gailua ezin izan da detektatu. Mesedez ziurtatu zure gailua ondo konektatuta dagoela eta ondoren sakatu 'Saiatu berriz' edo 'Utzi' grabaketa bertan behera uzteko.
 TEXT_CAMERA_NOT_FOUND=Zure kamera gailua ezin izan da detektatu. Mesedez ziurtatu zure gailua ondo konektatuta dagoela eta ondoren sakatu 'Saiatu berriz' edo 'Utzi' grabaketa bertan behera uzteko.
 TEXT_ADMINISTRATIVELY_DISABLED=Zure webkam eta mikrofonoa administratiboki desgaituta daude. Mesedez zure sistemako kudeatzailearekin harremanetan jarri.
