Removed the popup class for the privacy settings. Now we use a layer instead. Further checks to know whether we've got an active connection or not.

--- a/locale/es_ES/myResources.properties
+++ b/locale/es_ES/myResources.properties
@@ -21,6 +21,7 @@ SUBITLE_START_TIME_TOOLTIP=Iniciar línea de subtítulo
 SUBTITLE_STOP_TIME_TOOLTIP=Detener línea de subtítulo
 
 BUTTON_RETRY=Reintentar
+BUTTON_SHOW_PRIVACY_SETTINGS=Mostrar opciones de privacidad
 BUTTON_OK=Aceptar
 BUTTON_CANCEL=Cancelar
 BUTTON_RECORD=Grabar
