--- a/locale/eu_ES/myResources.properties
+++ b/locale/eu_ES/myResources.properties
@@ -21,6 +21,7 @@ SUBITLE_START_TIME_TOOLTIP=Azpititulu lerroa hasieratu
 SUBTITLE_STOP_TIME_TOOLTIP=Azpititulu lerror geldiarazi
 
 BUTTON_RETRY=Saiatu Berriz
+BUTTON_SHOW_PRIVACY_SETTINGS=Pribatutasun hobespenak ikusi
 BUTTON_OK=Ados
 BUTTON_CANCEL=Utzi
 BUTTON_RECORD=Grabatu
