--- a/locale/en_US/myResources.properties
+++ b/locale/en_US/myResources.properties
@@ -21,6 +21,7 @@ SUBITLE_START_TIME_TOOLTIP=Start subtitle line
 SUBTITLE_STOP_TIME_TOOLTIP=Stop subtitle line
 
 BUTTON_RETRY=Retry
+BUTTON_SHOW_PRIVACY_SETTINGS=Show privacy settings
 BUTTON_OK=Ok
 BUTTON_CANCEL=Cancel
 BUTTON_RECORD=Record
