--- a/locale/es_ES/myResources.properties
+++ b/locale/es_ES/myResources.properties
@@ -7,11 +7,11 @@ TITLE_INFORMATION=Información
 TITLE_CONFIRMATION=Confirmación
 
 TITLE_PRIVACY_SETTINGS=Configuración de privacidad
-TEXT_MIC_NOT_FOUND=El micrófono no está siendo detectada. Por favor, asegúrate de que el dispositivo está concectado correctamente y después pulsa 'Reintentar'. Pincha 'Cancelar' si quieres abortar la grabación.
+TEXT_MIC_NOT_FOUND=El micrófono no está siendo detectado. Por favor, asegúrate de que el dispositivo está concectado correctamente y después pulsa 'Reintentar'. Pincha 'Cancelar' si quieres abortar la grabación.
 TEXT_CAMERA_NOT_FOUND=La webcam no está siendo detectada. Por favor, asegúrate de que el dispositivo está concectado correctamente y después pulsa 'Reintentar'. Pincha 'Cancelar' si quieres abortar la grabación.
 TEXT_ADMINISTRATIVELY_DISABLED=Alguna directiva de seguridad prohibe el acceso a la webcam y al micrófono. Por favor, ponte en contacto con el administrador del sistema.
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Por favor, pincha en 'Permitir' cuando veas esta ventana. Marca la casilla 'Recordar' si quieres saltar este paso la siguiente vez que grabes un ejercicio.
-TEXT_MIC_TEST_EXPLAIN=Este test te ayudará a saber si tu micrófono funciona correctamente y si tiene el volumen mÃ­nimo requierido para grabar un ejercicio.
+TEXT_MIC_TEST_EXPLAIN=Este test te ayudará a saber si tu micrófono funciona correctamente y si tiene el volumen mínimo requierido para grabar un ejercicio.
 
 LABEL_MIC_INPUT_LEVEL=Nivel entrada micrófono
 LABEL_ROLE_CURRENTLY_TALKING=Hablando
