The locale of the component can now be explicitly set via FlashVars. For that use a key=value pair like locale=en_US. Also localized some elements that weren't localized

--- a/locale/en_US/myResources.properties
+++ b/locale/en_US/myResources.properties
@@ -13,6 +13,9 @@ TEXT_ADMINISTRATIVELY_DISABLED=An administrative rule forbids the access to came
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Please click 'Allow' when you see this window. Also click on 'Remember' to skip this step the next time you want to record something.
 TEXT_MIC_TEST_EXPLAIN=This test will ensure that your microphone works as excepted and has the minimum required volume to record an exercise.
 
+NO_CONNECTION=Streaming connection lost. Trying to reconnect...
+LABEL_MIC_WAITING_FOR_INPUT=Waiting for mic input
+
 LABEL_MIC_INPUT_LEVEL=Mic Input Level
 LABEL_ROLE_CURRENTLY_TALKING=Talking
 SHOW_SUBTITLES=Show subtitles
