--- a/locale/es_ES/myResources.properties
+++ b/locale/es_ES/myResources.properties
@@ -13,6 +13,9 @@ TEXT_ADMINISTRATIVELY_DISABLED=Alguna directiva de seguridad prohibe el acceso a
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Por favor, pincha en 'Permitir' cuando veas esta ventana. Marca la casilla 'Recordar' si quieres saltar este paso la siguiente vez que grabes un ejercicio.
 TEXT_MIC_TEST_EXPLAIN=Este test te ayudará a saber si tu micrófono funciona correctamente y si tiene el volumen mínimo requierido para grabar un ejercicio.
 
+NO_CONNECTION=Conexión streaming interrumpida. Intentando reconexión...
+LABEL_MIC_WAITING_FOR_INPUT=Esperando actividad de micrófono
+
 LABEL_MIC_INPUT_LEVEL=Nivel entrada micrófono
 LABEL_ROLE_CURRENTLY_TALKING=Hablando
 SHOW_SUBTITLES=Mostrar subtítulos
