--- a/locale/eu_ES/myResources.properties
+++ b/locale/eu_ES/myResources.properties
@@ -13,6 +13,9 @@ TEXT_ADMINISTRATIVELY_DISABLED=Zure webkam eta mikrofonoa administratiboki desga
 TEXT_PRIVACY_RIGHTS_EXPLAIN=Mesedez sakatu 'Baimendu' ondoko leihoa agertzean. Zenbait gauza grabatu nahi badituzu sakatu 'Gogoratu' eta honela urrats hau errepikatzeko beharrik ez duzu izango.
 TEXT_MIC_TEST_EXPLAIN=Froga honek zure mikrofonoa espero bezala funtzionatzen duela eta ariketa bat grabatzeko beharrezkoa den bolumen-maila minimoa detektatzen dela konprobatzen du.
 
+NO_CONNECTION=Streaming konexioa galdu da. Birkonektatzen saiatzen...
+LABEL_MIC_WAITING_FOR_INPUT=Mikrofono aktibitateari itxaroten
+
 LABEL_MIC_INPUT_LEVEL=Mikrofono sarrera maila
 LABEL_ROLE_CURRENTLY_TALKING=Hizketan
 SHOW_SUBTITLES=Azpitituluak agertarazi
